change background color

--- a/css/style.css
+++ b/css/style.css
@@ -68,15 +68,15 @@ a:visited{
 }
 
 .bg-yellow{
-   background: #cdffcc;
+   background: #dce1fd;
 }
 
 .bg-green{
-   background: #cdffcc;
+   background: #dce1fd;
 }
 
 .bg-red{
-   background: #cdffcc;
+   background: #dce1fd;
 }
 
 .png-logo{
