--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 body{
-   background-color: #e7e7e7;
+   background-color: #ffffff;
    color: #0f141e;
    font-size: 16px;
    font-weight: normal;
@@ -56,7 +56,7 @@ a:visited{
    margin: 0;
    font-style: italic;
    font-weight: bold;
-   text-decoration: none;  
+   text-decoration: none;
 }
 
 /*BOX MODEL*/
@@ -68,20 +68,20 @@ a:visited{
 }
 
 .bg-yellow{
-   background: #dce1fd;
+   background: #d4d4d4;
 }
 
 .bg-green{
-   background: #dce1fd;
+   background: #d4d4d4;
 }
 
 .bg-red{
-   background: #dce1fd;
+   background: #d4d4d4;
 }
 
 .png-logo{
    width: 100px;
-   padding: auto;   
+   padding: auto;
 }
 
 
@@ -96,12 +96,12 @@ a:visited{
 }
 
 .list{
-   padding: 0 20px;   
+   padding: 0 20px;
 }
 
 .list li{
    color: #86898f;
-   margin-bottom: 10px;   
+   margin-bottom: 10px;
 }
 
 .table{
@@ -158,7 +158,7 @@ a:visited{
 }
 
 .row > .form-group{
-   width: 50%;   
+   width: 50%;
 }
 
 .row > .form-group:first-child{
